# OpenGL-Starter

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: frag.glsl  frag.glsl.bak  frag.glsl.save  vert.glsl  vert.glsl.bak
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.c  matrix.h  orthographicCamera.c  orthographicCamera.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vector.h  viewMatrix.c  viewMatrix.h
